# RoSE

./: .dockerignore  .env.example  .gitignore  .zenodo.json  AGENTS.html  AGENTS.md  CITATION.cff  Dockerfile  LICENSE  README.md  RELEASING.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
application/seisbench-rose-benchmark/: README.md
application/seisbench-rose-benchmark/benchmarks/: build_tables.py  models.py  run_benchmark.py  run_stead.py
application/seisbench-rose-benchmark/data/: README.md  rose_test_index.csv  stead_noise_index.csv
application/seisbench-rose-benchmark/env/: requirements-pytorch.txt  requirements-tf.txt  requirements.txt
application/seisbench-rose-benchmark/models/: README.md  SHA256SUMS
application/seisbench-rose-benchmark/models/phasenet_rose/: phasenet_rose.pt
application/seisbench-rose-benchmark/pickerbench/: __init__.py  leaderboard.py  matching.py  residual_stats.py  trace_io.py
application/seisbench-rose-benchmark/redpan_inference/: core.py
application/seisbench-rose-benchmark/results/: README.md  rose_detection.csv  rose_picking.csv  rose_residual_stats.csv  stead_detection.csv  stead_picking.csv
application/seisbench-rose-benchmark/scripts/: reproduce_all.sh
benchmark/: README.md  _pipeline.py  bench_joint_rose.py  bench_noise_fp.py  bench_pickers_rose.py  bench_redpan_rose.py  bench_stead_test.py  build_rose_final_benchmark.py  build_rose_residual_stats.py  build_stead_full_benchmark.py  build_test_indices.py  config.json  eval_eqt_rose.py  regenerate_results.sh  run_inference.py  viz_models_rose.py
benchmark/data/: README.md
benchmark/redpan_inference/: __init__.py  utils.py
data/: Enhanced_ROMPLUS_catalog.csv
docs/: DATASET.md  SEISBENCH_FORMAT.md
examples/: 01_load_and_browse.py  02_eqt_instance_vrancea.py  03_eqt_instance_vrancea.py  03_event_ground_motion.py  04_event_ground_motion.py  04_picker_inference.py
phase_picking/: README.md
phase_picking/benchmark/: README.md  _pipeline.py  bench_joint_rose.py  bench_noise_fp.py  bench_pickers_rose.py  bench_redpan_rose.py  bench_stead_test.py  build_leaderboard.py  build_rose_final_benchmark.py  build_rose_residual_stats.py  build_stead_full_benchmark.py  build_test_indices.py  config.json  eval_eqt_rose.py  run_inference.py  viz_models_rose.py
phase_picking/benchmark/data/: README.md
phase_picking/models/: LICENSE-WEIGHTS  README.md
phase_picking/models/eqt_rose/: eqt_rose.pt
phase_picking/results/: README.md  rose_detection.csv  rose_picking.csv  rose_residual_stats.csv  stead_detection.csv  stead_picking.csv
phase_picking/training/: build_rose_split_index.py  train_eqt_rose.py  train_phasenet_rose.py
results/: README.md  rose_residual_stats.csv
rose/: __init__.py  checkpoint_io.py  convert.py  dataset.py  pickers.py  qc.py  splits.py
rose/redpan_inference/: __init__.py  core.py  picks.py  utils.py
seisbench_compat/: README.md  convert.py  smoke_test.py
stationxml_sources/sc3ml_niep/: sc3ml_to_stationxml.py
tests/: conftest.py  test_checkpoint_io.py  test_convert.py  test_dataset.py  test_qc.py  test_redpan_inference.py  test_splits.py
training/: build_rose_split_index.py  normalize_rose_times.py  train_eqt_rose.py  train_phasenet_rose.py
training/cloud/: run_eqt_rose.sh  run_eqt_rose_v3.sh  run_phasenet_rose.sh
