[project]
name = "rose-seismic"
version = "0.1.0"
description = "RoSE — a ROMPLUS-enhanced Romanian seismic dataset for ML and seismological applications, in SeisBench format"
readme = "README.md"
requires-python = ">=3.10"
# Code in this repo is MIT (see LICENSE). The published RoSE *dataset* itself
# (the HDF5 + metadata distributed on Zenodo, mounted at data/rose/) is
# CC-BY-4.0 — see LICENSE-DATA and the "License" section of the README.
license = { text = "MIT" }
authors = [{ name = "RoSE dataset contributors" }]

# Core runtime — everything the rose loader and examples need EXCEPT torch.
dependencies = [
    # Pinned at >=0.10 because the API rose.dataset.RoSE inherits from
    # (seisbench.data.WaveformDataset) was reorganised between 0.9 and
    # 0.10. No upper bound: drop the cap so the package works against
    # newer SeisBench releases until/unless a real API break shows up,
    # at which point pin to the affected major.
    "seisbench>=0.10",
    "obspy>=1.4",
    "h5py>=3.8",
    "pandas>=2.0",
    "numpy>=1.24,<2.0",
    "scipy>=1.10",        # examples/04: scipy.signal.hilbert for envelopes
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

[project.optional-dependencies]
# PyTorch. Pick the variant matching your hardware:
#   uv pip install -e ".[cpu]"   # CPU-only torch
#   uv pip install -e ".[cuda]"  # CUDA wheel (configured below)
cpu = ["torch>=2.1"]
cuda = ["torch>=2.1"]
# SeisBench training + benchmarking (phase_picking/training/, phase_picking/benchmark/). Needs a torch
# extra above as well; install e.g.  uv pip install -e ".[cuda,bench]"
bench = ["torch>=2.1", "scikit-learn>=1.2"]
# RED-PAN-60s Keras inference (rose/redpan_inference, the TF model in
# phase_picking/models/redpan_tf60/).
tf = ["tensorflow>=2.13"]
dev = ["pytest>=7", "ruff>=0.4"]

[project.urls]
Source = "https://github.com/tso1257771/RoSE"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rose"]

# Ruff configuration -------------------------------------------------------
[tool.ruff]
# Pin a stable target Python so ruff stops flagging f-strings / type unions
# that are valid on the floor (3.10) but flagged on older defaults.
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# Standalone scripts under phase_picking/benchmark/ and phase_picking/training/
# do `sys.path.insert(0, ...)` BEFORE importing the rose package or sibling
# modules — necessary so they can be run directly (without `pip install -e .`)
# from a fresh clone or via run_inference.py's subprocess pool. Ruff E402
# (module-import-not-at-top-of-file) flags every post-sys.path import; the
# pattern is intentional and scoped to these two script directories.
"phase_picking/benchmark/*.py" = ["E402"]
"phase_picking/training/*.py"  = ["E402"]
# Examples follow the same `sys.path` pattern so they can be run from a
# checkout, plus a few inline `if cond: stmt` and trailing-print idioms
# (E701/E702) that read cleanly in tutorial-style scripts.
"examples/*.py" = ["E402", "E701", "E702"]

# uv-specific configuration -------------------------------------------------
# Route the [cuda] extra at the official PyTorch CUDA index instead of PyPI.
[tool.uv]
constraint-dependencies = []

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", extra = "cuda" },
    { index = "pytorch-cpu",   extra = "cpu" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url  = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url  = "https://download.pytorch.org/whl/cpu"
explicit = true
